@@ -19,6 +19,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -103,7 +104,7 @@ public class MyOrderService {
         List<OrderProduct> newOrderProducts = newOrderProductDtos
                 .stream()
                 .map(orderProductDto -> createOrderProduct(currentStoreId, order, orderProductDto))
-                .toList();
+                .collect(Collectors.toList());
 
         order.setTotalPrice(calculateTotalPrice(newOrderProducts));
         order.setOrderProducts(newOrderProducts);
